[package]
name = "rpq"
version = "0.1.0"
authors = ["Quinten Palmer <quintenpalmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"

htmldsl = {path = "../htmldsl/htmldsl"}
